更新出品人，添加议题 列表

--- a/index.html
+++ b/index.html
@@ -390,8 +390,56 @@
         </div>
     </div>
     <!-- chairmans end -->
+    <div class="container-fluid speakers-section" id="chairmans1-and-speakers">
+
+        <div id="chairmans1" class="container text-center mx-auto">
+            <h1 class="title">出品人</h1>
+
+            <div class="card-deck">
+                <div class="card mb-2 box-shadow round-image-box">
+                    <img class="card-img-top" src="images/Jonathan.jpg"
+                         alt="Jonathan">
+                    <div class="card-body">
+                        <h5 class="card-title">Jonathan</h5>
+                        <p class="card-text" style="color: #5CBCD9; font-size: 16px;">开源测试框架Appium项目负责人</p>
+
+                    </div>
+                </div>
+
+                <div class="card mb-2 box-shadow  round-image-box">
+                    <img class="card-img-top" src="images/liyonggang.png"
+                         alt="李永刚">
+                    <div class="card-body">
+                        <h5 class="card-title">李永刚</h5>
+                        <p class="card-text"  style="color: #5CBCD9; font-size: 16px;" >美团酒店旅游测试团队负责人</p>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="card mb-2 box-shadow round-image-box">
+                    <img class="card-img-top" src="images/dingrumin.jpeg"
+                         alt="丁如敏">
+                    <div class="card-body">
+                        <h5 class="card-title">丁如敏</h5>
+                        <p class="card-text"  style="color: #5CBCD9; font-size: 16px;">腾讯手机QQ浏览器测试负责人</p>
+                    </div>
+                </div>
+
+                <div class="card mb-2 box-shadow  round-image-box">
+                    <img class="card-img-top" src="images/hutao.jpeg"
+                         alt="胡涛">
+                    <div class="card-body">
+                        <h5 class="card-title">胡涛</h5>
+                        <p class="card-text"  style="color: #5CBCD9; font-size: 16px;">网易云音乐测试总监</p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
     <!-- speakers here -->
-    <div class="container-fluid speakers-section" id="topics-and-speakers">
+    <div class="container-fluid producers-section" id="topics-and-producers">
 
 
         <div id="speakers" class="container text-center mx-auto">
@@ -484,6 +532,66 @@
 
             </div>
         </div>
+
+        <div class="container text-center mx-auto">
+            <h1 class="title">议题</h1>
+            <table class="table">
+                <tr>
+                    <td  class="rowspan">阿里巴巴</td>
+                    <td class="time">手机淘宝客户端全链路验收</td>
+                </tr>
+                <tr>
+                    <td rowspan="2" class="rowspan">蚂蚁金服</td>
+                    <td class="time">进化的覆盖率--代码时实染色系统</td>
+                </tr>
+                <tr>
+                    <td class="time">蚂蚁国际的质量左移之路与不得不说的代码门禁</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">腾讯</td>
+                    <td class="time">腾讯Web UI自动化测试平台实践</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">360</td>
+                    <td class="time">如何构建和提升测试团队的软实力</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">蔚来汽车</td>
+                    <td class="time">蔚来汽车车联网云端测试与持续集成方案</td>
+                </tr>
+                <tr>
+                    <td rowspan="2" class="rowspan">小米</td>
+                    <td class="time">小爱同学语音模型评测</td>
+                </tr>
+                <tr>
+                    <td class="time">可视化编程技术在移动UI自动化中的应用</td>
+                </tr>
+                <tr>
+                    <td rowspan="2" class="rowspan">有赞</td>
+                    <td class="time">有赞资损防控体系</td>
+                </tr>
+                <tr>
+                    <td class="time">有赞全链路压测实践</td>
+                </tr>
+                <tr>
+                    <td rowspan="2" class="rowspan">VIPKID</td>
+                    <td class="time">“流量回放”在多耦合系统重构中的实践之路</td>
+                </tr>
+                <tr>
+                    <td class="time">千万级约课系统自动化压测实践</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">安居客</td>
+                    <td class="time">安居客QA的技术转型之路</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">苏宁易购</td>
+                    <td class="time">苏宁易购亿万规模性能测试实践之SQL性能调优</td>
+                </tr>
+            </table>
+
+        </div>
+
         <div class="container text-center mx-auto">
             <h1 class="title">议题范围</h1>
             <img class="card-img-top" src="images/ce63e390-6b94-47fd-b055-1a1a84528265.png"
