更新合作伙伴

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                         <li>
                                 <a href="https://www.csdn.net/">
                                     <img style="max-width: 300px;
-                                    max-height: 130px;" class="card-img-top" src="images/049a982d-b9b8-4330-ade5-9debf1b57244.jpg"
+                                    max-height: 130px;" class="card-img-top" src="images/csdn.jpg"
                                         alt="csdn">
                                 </a>
                         </li>
@@ -725,6 +725,49 @@
                         <a href="http://istester.com/">
                             <img class="card-img-top" src="images/a4761d15-1f41-4d73-b434-78225bcfb147.png"
                                 alt="IDO老徐">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="http://www.51cto.com/">
+                            <img class="card-img-top" src="images/51cto.png"
+                                 alt="51cto">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.oschina.net/">
+                            <img class="card-img-top" src="images/oschina.jpg"
+                                 alt="oschina">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://www.ciotimes.com/bdtxh/">
+                            <img class="card-img-top" src="images/cioapp.jpeg"
+                                 alt="ciotimes">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://www.cctime.com/">
+                            <img class="card-img-top" src="images/cctime.gif"
+                                 alt="cctime">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://www.newbnews.com/">
+                            <img class="card-img-top" src="images/newbnews.jpeg"
+                                 alt="newbnews">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://segmentfault.com/">
+                            <img class="card-img-top" src="images/segmentfault.gif"
+                                 alt="newbnews">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.bagevent.com/">
+                            <img class="card-img-top" src="images/bagevent.jpg"
+                                 alt="newbnews">
                         </a>
                     </li>
 
