更新导航图

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     }
 
     #head-cover {
-      background-image: url(images/806b17ac-a423-4d49-9481-ac09502a389b.jpg);
+      background-image: url(images/806b17ac-a423-4d49-9481-ac09502a389b.png);
       background-color: transparent;
       background-size: cover;
       background-position: 50% 50%;
