--- a/index.html
+++ b/index.html
@@ -552,20 +552,27 @@
                     <td class="time">腾讯Web UI自动化测试平台实践</td>
                 </tr>
                 <tr>
-                    <td  class="rowspan">360</td>
+                    <td  rowspan="2"  class="rowspan">360</td>
                     <td class="time">如何构建和提升测试团队的软实力</td>
+                </tr>
+                <tr>
+                    <td class="time">安全能力SDK交付质量保证实践</td>
                 </tr>
                 <tr>
                     <td  class="rowspan">蔚来汽车</td>
                     <td class="time">蔚来汽车车联网云端测试与持续集成方案</td>
                 </tr>
                 <tr>
-                    <td rowspan="2" class="rowspan">小米</td>
+                    <td rowspan="3" class="rowspan">小米</td>
                     <td class="time">小爱同学语音模型评测</td>
                 </tr>
                 <tr>
                     <td class="time">可视化编程技术在移动UI自动化中的应用</td>
                 </tr>
+                <tr>
+                    <td class="time">安卓Rom 持续集成及小米云测平台实践</td>
+                </tr>
+
                 <tr>
                     <td rowspan="2" class="rowspan">有赞</td>
                     <td class="time">有赞资损防控体系</td>
@@ -587,6 +594,30 @@
                 <tr>
                     <td  class="rowspan">苏宁易购</td>
                     <td class="time">苏宁易购亿万规模性能测试实践之SQL性能调优</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">微医</td>
+                    <td class="time">微医多维一体化监控平台实践</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">转转</td>
+                    <td class="time">电商业务测试方案与实战落地</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">转转</td>
+                    <td class="time">电商业务测试方案与实战落地</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">字节跳动</td>
+                    <td class="time">国际化机架建设与出海产品测试经验分享</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">游族</td>
+                    <td class="time">游族服务端专项测试</td>
+                </tr>
+                <tr>
+                    <td  class="rowspan">AppetizerIO</td>
+                    <td class="time">App测试数据的高级分析和TestOps</td>
                 </tr>
             </table>
 
