--- a/index.html
+++ b/index.html
@@ -223,26 +223,12 @@
             </p>
         </div>
     </div>
-</div>
+    <br />
+<!--</div>-->
 
-<div class="container-fluid " >
-    <div  class="container text-center mx-auto">
-        <div >
-            <h1 class="title" align="left">关于 TesterHome</h1>
-            <p class="lead text-left">
-                TesterHome 是国内最大最活跃的测试开发技术社区之一，成立于 2012 年，目前有 3.5 万+ 注册用户，均来自于行业一线企业（互联网 BAT、银行、金融、电商等）。
-            </p>
-            <p class="lead text-left">
-                TesterHome 已成为互联网领域软件质量保证与测试技术发展的风向标，以推进国内软件测试开源项目发展为己任，同时不遗余力的引入国外测试工具（Appium/STF等）。
-            </p>
-            <p class="lead text-left">
-                TesterHome 测试技术社区线上累计有近 2万 主题讨论帖，线下在全国各地成功举办过 50次+ 测试交流分享会，并获得良好反响，影响范围 200万+ 人次／年。
-            </p>
-        </div>
-    </div>
-</div>
 
-<div class="container-fluid speakers-section" >
+
+<!--<div class="container-fluid speakers-section" >-->
     <div  class="container text-center mx-auto">
         <div id="manager-slogan">
     <h1 class="title text-left"  >名企测试经理寄语</h1>
@@ -275,7 +261,7 @@
                         TesterHome，真实的感受到社区发生的变化，在社区学习交流，很高兴结识了这么多靠谱的小伙伴，相信未来会有更多热爱测试技术的小伙伴加入进来，既往不恋，纵情向前，希望社区越办越好。</p>
                     <h4 id="antxwj">蚂蚁金服人工智能部质量团队负责人 许文君</h4>
                     <p>TesterHome 社区引领质量行业小伙伴一直在拥抱着行业的变化，从公众号、论坛、线下活动中也得到很多启发。</p>
-                    <h4 id="360pxq">360 高级测试副总监 彭兴强</h4>
+                    <h4 id="360pxq">360 高级测试总监 彭兴强</h4>
                     <p>TesterHome 已成为引领测试领域发展的一股强大力量，愿社区越办越好，早日成为测试领域的黄埔军校。</p>
                     <h4 id="yiqizuoyeje">一起作业QA负责人 基恩</h4>
                     <p>认识 TesterHome 也有 3 个年头了，在这 3
@@ -463,11 +449,11 @@
                 <td class="time" >蔚来汽车车联网云端测试与持续集成方案</td>
                 <td class="time">刘春明</td>
             </tr>
-            <tr>
-                <td  class="rowspan">优酷</td>
-                <td class="time">用户数据驱动优酷体验提升</td>
-                <td class="time">闫佳阳</td>
-            </tr>
+            <!--<tr>-->
+                <!--<td  class="rowspan">优酷</td>-->
+                <!--<td class="time">用户数据驱动优酷体验提升</td>-->
+                <!--<td class="time">闫佳阳</td>-->
+            <!--</tr>-->
             <tr>
                 <td  rowspan="2"  class="rowspan">爱奇艺</td>
                 <td class="time">爱奇艺推荐系统质量保证体系</td>
@@ -729,57 +715,57 @@
         </div>
     </div>
 </div>
-<div class="container-fluid speakers-section" >
-    <div class="container text-center mx-auto">
-        <h1 class="title"  align="left">游戏测试方向</h1>
-        <table class="table">
-            <tr>
-                <td rowspan="2" class="rowspan">腾讯</td>
-                <td class="time">天美质量管理-系列议题</td>
-            </tr>
-            <tr>
-                <td class="time">画面异常检测的三阶段及AI实践</td>
-            </tr>
-        </table>
-    </div>
-    <div  class="container text-center mx-auto">
-        <h1 class="title"  align="left">演讲嘉宾</h1>
-        <div class="card-deck">
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
+<!--<div class="container-fluid speakers-section" >-->
+    <!--<div class="container text-center mx-auto">-->
+        <!--<h1 class="title"  align="left">游戏测试方向</h1>-->
+        <!--<table class="table">-->
+            <!--<tr>-->
+                <!--<td rowspan="2" class="rowspan">腾讯</td>-->
+                <!--<td class="time">天美质量管理-系列议题</td>-->
+            <!--</tr>-->
+            <!--<tr>-->
+                <!--<td class="time">画面异常检测的三阶段及AI实践</td>-->
+            <!--</tr>-->
+        <!--</table>-->
+    <!--</div>-->
+    <!--<div  class="container text-center mx-auto">-->
+        <!--<h1 class="title"  align="left">演讲嘉宾</h1>-->
+        <!--<div class="card-deck">-->
+            <!--<div class="card mb-2 box-shadow">-->
+                <!--<img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"-->
+                     <!--alt="头像">-->
+                <!--<div class="card-body">-->
+                    <!--<p class="card-text">虚位以待</p>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
+            <!--<div class="card mb-2 box-shadow">-->
+                <!--<img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"-->
+                     <!--alt="头像">-->
+                <!--<div class="card-body">-->
+                    <!--<p class="card-text">虚位以待</p>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
+            <!--<div class="card mb-2 box-shadow">-->
+                <!--<img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"-->
+                     <!--alt="头像">-->
+                <!--<div class="card-body">-->
+                    <!--<p class="card-text">虚位以待</p>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
+            <!--<div class="card mb-2 box-shadow">-->
+                <!--<img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"-->
+                     <!--alt="头像">-->
+                <!--<div class="card-body">-->
+                    <!--<p class="card-text">虚位以待</p>-->
+                <!--</div>-->
+            <!--</div>-->
 
-        </div>
-    </div>
-</div>
+        <!--</div>-->
+    <!--</div>-->
+<!--</div>-->
 
 <div class="container-fluid producers-section" id="topics-and-producers">
     <div class="container text-center mx-auto">
@@ -811,11 +797,11 @@
                 <td class="time">优酷视频生产质量保障体系</td>
                 <td class="time">党高峰</td>
             </tr>
-            <tr>
-                <td  class="rowspan">字节跳动</td>
-                <td class="time">国际化机架建设与出海产品测试经验分享</td>
-                <td class="time">黄治</td>
-            </tr>
+            <!--<tr>-->
+                <!--<td  class="rowspan">字节跳动</td>-->
+                <!--<td class="time">国际化机架建设与出海产品测试经验分享</td>-->
+                <!--<td class="time">黄治</td>-->
+            <!--</tr>-->
             <tr>
                 <td  class="rowspan">安居客</td>
                 <td class="time">安居客QA的技术转型之路</td>
@@ -1075,6 +1061,22 @@
                  alt="大会地址">
         </div>
 
+    </div>
+</div>
+<div class="container-fluid " >
+    <div  class="container text-center mx-auto">
+        <div >
+            <h1 class="title" align="left">关于 TesterHome</h1>
+            <p class="lead text-left">
+                TesterHome 是国内最大最活跃的测试开发技术社区之一，成立于 2012 年，目前有 3.5 万+ 注册用户，均来自于行业一线企业（互联网 BAT、银行、金融、电商等）。
+            </p>
+            <p class="lead text-left">
+                TesterHome 已成为互联网领域软件质量保证与测试技术发展的风向标，以推进国内软件测试开源项目发展为己任，同时不遗余力的引入国外测试工具（Appium/STF等）。
+            </p>
+            <p class="lead text-left">
+                TesterHome 测试技术社区线上累计有近 2万 主题讨论帖，线下在全国各地成功举办过 50次+ 测试交流分享会，并获得良好反响，影响范围 200万+ 人次／年。
+            </p>
+        </div>
     </div>
 </div>
 
