--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
-
 <!doctype html>
 <html lang="en">
-
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
           crossorigin="anonymous">
@@ -183,8 +180,6 @@
     <div id="head-cover" class="card-deck"> </div>
     <!--<div ><img src = " https://img.bagevent.com/resource/20190327/0933532821803.png">-->
     </div>
-
-
     <div id="about" class="container text-center mx-auto">
 
         <iframe id="promote_ticket_iframe" width="100%" src="//www.bagevent.com/widget/ticket/2202999?widget=2" frameborder="0" scrolling="no"></iframe>
@@ -224,11 +219,6 @@
         </div>
     </div>
     <br />
-<!--</div>-->
-
-
-
-<!--<div class="container-fluid speakers-section" >-->
     <div  class="container text-center mx-auto">
         <div id="manager-slogan">
     <h1 class="title text-left"  >名企测试经理寄语</h1>
@@ -289,8 +279,8 @@
 </div>
 <!-- about end -->
 
+<!-- chairmans here -->
 <div class="container-fluid chairmans-section" id="chairmans1-and-speakers">
-
     <div id="chairmans1" class="container text-center mx-auto">
         <h1 class="title"  align="left">出品人</h1>
 
@@ -336,7 +326,6 @@
         </div>
     </div>
 </div>
-<!-- chairmans here -->
 <div class="container-fluid speakers-section" id="chairmans-and-producers">
 
     <div id="chairmans" class="container text-center mx-auto">
@@ -424,57 +413,16 @@
 </div>
 <!-- chairmans end -->
 
-
-
-<div class="container text-center mx-auto">
-    <h1 class="title"  align="left">议题范围</h1>
-    <img class="card-img-top" src="http://2019.test-china.org/images/ce63e390-6b94-47fd-b055-1a1a84528265.png"
-         alt="议题范围">
-</div>
-
-<!-- speakers here -->
-<div class="container-fluid producers-section" >
-
+<!-- topics-and-speakers here -->
+<div class="container-fluid chairmans-section" id="topics-and-speakers">
     <div class="container text-center mx-auto">
-        <h1 class="title"  align="left">高新领域方向</h1>
-        <table class="table">
-            <tr>
-                <td  class="rowspan">小米</td>
-                <td class="time">小爱同学语音模型评测</td>
-                <td class="time">董沐</td>
-
-            </tr>
-            <tr>
-                <td  class="rowspan">蔚来汽车</td>
-                <td class="time" >蔚来汽车车联网云端测试与持续集成方案</td>
-                <td class="time">刘春明</td>
-            </tr>
-            <!--<tr>-->
-                <!--<td  class="rowspan">优酷</td>-->
-                <!--<td class="time">用户数据驱动优酷体验提升</td>-->
-                <!--<td class="time">闫佳阳</td>-->
-            <!--</tr>-->
-            <tr>
-                <td  rowspan="2"  class="rowspan">爱奇艺</td>
-                <td class="time">爱奇艺推荐系统质量保证体系</td>
-                <td class="time"></td>
-            </tr>
-            <tr>
-                <td class="time">基于深度学习的UI异常检测</td>
-                <td class="time"></td>
-            </tr>
-            <tr>
-                <td  class="rowspan">京东</td>
-                <td class="time">算法在测试中的实践——如何进行自测评估</td>
-                <td class="time">樊宇</td>
-            </tr>
-            <tr>
-                <td rowspan="3" class="rowspan">百度</td>
-                <td class="time">智能设备硬件准入标准建设</td>
-                <td class="time">郑林</td>
-            </tr>
-        </table>
+        <h1 class="title"  align="left">大会议题</h1>
+        <img class="card-img-top" src="https://img.bagevent.com/resource/20190507/1526445451803.jpg?imageView2/2/w/1100/interlace/1/q/100">
+        <img class="card-img-top" src="https://img.bagevent.com/resource/20190507/1530268211803.jpg?imageView2/2/w/1100/interlace/1/q/100">
+        <img class="card-img-top" src="https://img.bagevent.com/resource/20190507/1530270271803.jpg?imageView2/2/w/1100/interlace/1/q/100" >
     </div>
+</div>
+<div class="container-fluid speakers-section" >
     <div  class="container text-center mx-auto">
         <h1 class="title"  align="left">演讲嘉宾</h1>
 
@@ -565,310 +513,10 @@
         </div>
     </div>
 </div>
-<div class="container-fluid speakers-section" >
-
-    <div class="container text-center mx-auto">
-        <h1 class="title"  align="left">服务端测试方向</h1>
-        <table class="table">
-            <tr>
-                <td  rowspan="2"  class="rowspan">VIPKID</td>
-                <td class="time">“流量回放”在多耦合系统重构中的实践之路</td>
-                <td class="time">谢林</td>
-            </tr>
-            <tr>
-                <td class="time">千万级约课系统自动化压测实践</td>
-                <td class="time">宁浩</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">苏宁</td>
-                <td class="time">苏宁易购亿万规模性能测试实践之SQL性能调优</td>
-                <td class="time">杨婧</td>
-            </tr>
-        </table>
-    </div>
-    <div  class="container text-center mx-auto">
-        <h1 class="title"  align="left">演讲嘉宾</h1>
-        <div class="card-deck">
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
-
-<div class="container-fluid producers-section" >
-
-    <div class="container text-center mx-auto">
-        <h1 class="title"  align="left">移动测试方向</h1>
-        <table class="table">
-            <tr>
-                <td  rowspan="2"  class="rowspan">蚂蚁金服</td>
-                <td class="time">进化的覆盖率-代码实时染色系统</td>
-                <td class="time">周为、翟帅</td>
-            </tr>
-            <tr>
-                <td class="time">移动测试2.0+</td>
-                <td class="time">乐舟</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">手淘</td>
-                <td class="time">手淘客户端全链路验收</td>
-                <td class="time">韩锷</td>
-
-            </tr>
-            <tr>
-                <td  rowspan="2"  class="rowspan">小米</td>
-                <td class="time">安卓Rom 持续集成及小米云测平台实践</td>
-                <td class="time">刘斌</td>
-            </tr>
-            <tr>
-                <td class="time">可视化编程技术在移动UI自动化中的应用</td>
-                <td class="time">张海峰</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">360</td>
-                <td class="time">安全能力SDK交付质量保证实践</td>
-                <td class="time">刘春勇</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">AppetizerIO</td>
-                <td class="time">APP测试数据的高级分析和TestOps</td>
-                <td class="time">夏鸣远</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">小红书</td>
-                <td class="time">小红书app性能自动化测试平台</td>
-                <td class="time">汤伟奇</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">Intel</td>
-                <td class="time">Intel实时视频质量评估测试框架解析和开源之路</td>
-                <td class="time">张琰彬</td>
-            </tr>
-
-        </table>
-    </div>
-    <div  class="container text-center mx-auto">
-        <h1 class="title"  align="left">演讲嘉宾</h1>
-        <div class="card-deck">
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</div>
-<!--<div class="container-fluid speakers-section" >-->
-    <!--<div class="container text-center mx-auto">-->
-        <!--<h1 class="title"  align="left">游戏测试方向</h1>-->
-        <!--<table class="table">-->
-            <!--<tr>-->
-                <!--<td rowspan="2" class="rowspan">腾讯</td>-->
-                <!--<td class="time">天美质量管理-系列议题</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="time">画面异常检测的三阶段及AI实践</td>-->
-            <!--</tr>-->
-        <!--</table>-->
-    <!--</div>-->
-    <!--<div  class="container text-center mx-auto">-->
-        <!--<h1 class="title"  align="left">演讲嘉宾</h1>-->
-        <!--<div class="card-deck">-->
-            <!--<div class="card mb-2 box-shadow">-->
-                <!--<img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"-->
-                     <!--alt="头像">-->
-                <!--<div class="card-body">-->
-                    <!--<p class="card-text">虚位以待</p>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="card mb-2 box-shadow">-->
-                <!--<img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"-->
-                     <!--alt="头像">-->
-                <!--<div class="card-body">-->
-                    <!--<p class="card-text">虚位以待</p>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="card mb-2 box-shadow">-->
-                <!--<img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"-->
-                     <!--alt="头像">-->
-                <!--<div class="card-body">-->
-                    <!--<p class="card-text">虚位以待</p>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="card mb-2 box-shadow">-->
-                <!--<img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"-->
-                     <!--alt="头像">-->
-                <!--<div class="card-body">-->
-                    <!--<p class="card-text">虚位以待</p>-->
-                <!--</div>-->
-            <!--</div>-->
-
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
-
-<div class="container-fluid producers-section" id="topics-and-producers">
-    <div class="container text-center mx-auto">
-        <h1 class="title"  align="left">质量保障方向</h1>
-        <table class="table">
-            <tr>
-                <td  class="rowspan">有赞</td>
-                <td class="time">有赞资损防控体系</td>
-                <td class="time">万伟</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">微医</td>
-                <td class="time">微医多维一体化监控平台实践</td>
-                <td class="time">蒋刚毅</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">360</td>
-                <td class="time">如何构建测试团队的软实力</td>
-                <td class="time">高学文</td>
-
-            </tr>
-            <tr>
-                <td  class="rowspan">转转</td>
-                <td class="time">电商业务测试方案与实战落地</td>
-                <td class="time">田西西</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">优酷</td>
-                <td class="time">优酷视频生产质量保障体系</td>
-                <td class="time">党高峰</td>
-            </tr>
-            <!--<tr>-->
-                <!--<td  class="rowspan">字节跳动</td>-->
-                <!--<td class="time">国际化机架建设与出海产品测试经验分享</td>-->
-                <!--<td class="time">黄治</td>-->
-            <!--</tr>-->
-            <tr>
-                <td  class="rowspan">安居客</td>
-                <td class="time">安居客QA的技术转型之路</td>
-                <td class="time">卞伟</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">蚂蚁金服</td>
-                <td class="time">蚂蚁国际的质量左移之路与不得不说的代码门禁</td>
-                <td class="time">飞麦</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">汽车之家</td>
-                <td class="time">看得见的质量——质量罗盘</td>
-                <td class="time">朱媛媛</td>
-            </tr>
-            <tr>
-                <td  class="rowspan">陆金所</td>
-                <td class="time">陆金所造数服务</td>
-                <td class="time"></td>
-            </tr>
-
-        </table>
-    </div>
-    <div  class="container text-center mx-auto">
-        <h1 class="title"  align="left">演讲嘉宾</h1>
-        <div class="card-deck">
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-            <div class="card mb-2 box-shadow">
-                <img class="card-img-top" src="http://2019.test-china.org/images/7b8b4e6a-f9f0-4c74-bf49-c277f1fb33e5.jpg"
-                     alt="头像">
-                <div class="card-body">
-                    <p class="card-text">虚位以待</p>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-</div>
-<!-- speakers end -->
+<!-- topics-and-speakers end -->
 
 <!-- schedule here -->
-<div class="container-fluid schedule-section">
+<div class="container-fluid schedule-section" >
     <div id="schedule" class="container text-center mx-auto">
         <h1 class="title">日程安排</h1>
         <table class="table">
@@ -909,7 +557,7 @@
 
 <!-- sponsors here -->
 <div class="container-fluid sponsors-section">
-    <div id="sponsors" class="container text-center mx-auto">
+    <div   id="sponsors" class="container text-center mx-auto">
         <h1 class="title">赞助单位</h1>
         <a class="btn btn-primary" href="mailto:bd@testerhome.com?subject=申请赞助商">虚位以待</a>
 
@@ -1028,13 +676,19 @@
                 <li>
                     <a href="https://segmentfault.com/">
                         <img class="card-img-top" src="http://2019.test-china.org/images/segmentfault.gif"
-                             alt="newbnews">
+                             alt="segmentfault">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.bagevent.com/">
                         <img class="card-img-top" src="http://2019.test-china.org/images/bagevent.jpg"
-                             alt="newbnews">
+                             alt="百格">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://toutiao.io/">
+                        <img class="card-img-top" src="http://2019.test-china.org/images/开发者头条.jpg"
+                             alt="开发者头条">
                     </a>
                 </li>
 
@@ -1079,7 +733,6 @@
         </div>
     </div>
 </div>
-
 <!-- venue end -->
 
 <!-- contact here -->
