--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@
                 </li>
                 <li>
                     <a href="https://toutiao.io/">
-                        <img class="card-img-top" src="http://2019.test-china.org/images/开发者头条.jpg"
+                        <img class="card-img-top" src="http://2019.test-china.org/images/开发者头条.png"
                              alt="开发者头条">
                     </a>
                 </li>
